[package]
name = "xtensa-quickstart"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2018"

[dependencies]
xtensa-lx-rt = "0.5"
xtensa-lx = "0.3"
panic-halt = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-hal = "0.2"
embedded-graphics = "0.7"
nb = "0.1"
heapless = "0.7"

esp32 = { version = "0.10" }
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal.git", branch = "master" }

twatch = { path = "../twatch-rs" }
