[package]
name = "xtensa-quickstart"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"

[dependencies]
xtensa-lx-rt = "0.5"
xtensa-lx = "0.3"
panic-halt = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-hal = "0.2"
embedded-graphics = "0.7"
nb = "0.1"
heapless = "0.7"

esp32 = { version = "0.10" }
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal.git", branch = "master" }

twatch = { git = "https://github.com/pyaillet/twatch-lib-rs", branch = "main" }

#watchface = { version = "0.3", default-features = false }
watchface = { git = "https://github.com/pyaillet/rust-watchface", branch = "upgrade_eg", default-features = false }
